upload the controller menu

--- a/index.html
+++ b/index.html
@@ -11,15 +11,14 @@
     <div class="header-content">
       <div id="hamburger-menu" class=""><span></span><span></span><span></span></div>
       <div class="menu-content">
-        <div class="menu-sub">
-          <ul>
-            <li><a href="#profile">Profile</a></li>
-            <li><a href="">Experience</a></li>
-            <li><a href="">Abilities</a></li>
-            <li><a href="">Contact</a></li>
-            <li><a href="">Resume</a></li>
-          </ul>
-        </div>
+        <ul>
+          <li><a href="#profile">Profile</a></li>
+          <li><a href="">Experience</a></li>
+          <li><a href="">Abilities</a></li>
+          <li><a href="">Contact</a></li>
+          <li><a href="">Resume</a></li>
+        </ul>
+        <div class="menu-sub"></div>
       </div>
       <div class="header-bg"></div>
       <div class="header-txt">
