update main_menu and profile page

--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link href="css/style.css" rel="stylesheet" type="text/css" media="all">
-    <link href="css/app.css" rel="stylesheet" type="text/css" media="all">
+    <link href="css/app.css?103" rel="stylesheet" type="text/css" media="all">
   </head>
   <body>
     <div class="header-content">
       <div id="hamburger-menu" class=""><span></span><span></span><span></span></div>
-      <div class="menu-content">
+      <div class="menu-content" id="main_menu_id">
         <ul>
           <li><a href="#profile">Profile</a></li>
           <li><a href="">Experience</a></li>
@@ -40,7 +40,9 @@
               <p>
               Within the domain of web development, I have over 13 years of experience ranging from integration to back-end and front-end development making me a well rounded Full Stack developer. Using my experience of designing and developing websites and web applications, I have an excellent understanding of how technology can be used to align the requirements of both the business and the customer. My resume hosts a variety of projects tailored and catered to a diverse clientele, from big businesses to smaller companies. I am looking forward to new and challenging opportunities that will utilize my skills and add to my area of expertise. 
               </p>
+              <p>My goal is to meet interesting people from different fields and face the challenges of their businesses to achieve success.</p>
             </div>
+            <div class="user-col"><div class="user-sub-col"><span class="icon-user-tie"></span></div></div>
             <div class="right">
               <h6>Details</h6>
               <div class="row">
@@ -48,21 +50,22 @@
                 <div class="normal-txt">Paul Wei Li Ping</div>
               </div>
               <div class="row">
-                <label>Age:</label>
-                <div class="normal-txt" id="age_id">37</div>
+                <label>Email:</label>
+                <div class="normal-txt" id="age_id">paul@amazingwei.com</div>
               </div>
               <div class="row">
                 <label>Location:</label>
                 <div class="normal-txt"><a href="https://www.google.com/maps/place/Suzhou,+Jiangsu,+China/@31.3021493,120.5805406,11z/data=!4m5!3m4!1s0x35b3a0d19bd25e07:0x21e57f85bd766004!8m2!3d31.298974!4d120.585289" class="location"><span class="icon-location2"></span> Suzhou, Jiangsu Province, China</a></div>
               </div>
+              <div class="row btn-container"><a href="mailto:paul@amazingwei.com">contact</a></div>  
             </div>
             <div style="clear:both;"></div>
-            <p>My goal is to meet interesting people from different fields and face the challenges of their businesses to achieve success. If you have any further questions, please don't hesitate to <a href="mailto:paul@amazingwei.com">contact</a> me.</p>
+            
           </div>
         </div>
       </div>
     </div>
   <script src="js/jquery-3.3.1.min.js"></script>
-  <script src="js/app.js"></script>
+  <script src="js/app.js?20"></script>
   </body>
 </html>
