--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link href="css/style.css" rel="stylesheet" type="text/css" media="all">
-    <link href="css/app.css?138" rel="stylesheet" type="text/css" media="all">
+    <link href="css/app.css?16" rel="stylesheet" type="text/css" media="all">
 
   </head>
   <body>
@@ -73,18 +73,20 @@
                 <h1>Nestigator</h1>
                 <p>Nestigator is a marketplace to find rental properties in state of California. It aims to revolutionize real estate search with relevant, custom tailored local content and a comprehensive listings menu; connecting property owners with apartment seekers in a transparent and painless way.</p>
                 <a href=""><span>SHOW MORE</span><i class="icon-chevron-thin-right"></i></a>
-                <div class="exp-tech-hover">
+                <div class="tech-hover">
                   <img src="images/1.jpg">
-                  <div class="exp-inner-main">
-                    <div class="exp-inner-brd"> 
-                      <h4>Discovery</h4>
-                      <ul> 
-                        <li><a href="/user-research/">User Research</a></li> 
-                        <li><a href="/user-interviews/">User Interviews</a></li>
-                        <li><a href="/usability-testing/">Usability Testing</a></li>
-                        <li><a href="/market-competitive-analysis/">Market &amp; Competitive Analysis</a></li>
-                        <li><a href="/sandbox/">Sandbox</a></li>
+                  <div class="inner-main">
+                    <div class="inner-brd"> 
+                      <h4>Nestigator</h4>
+                      <h6>Tools & Techniques</h6>
+                      <ul>
+                        <li>Ruby On Rails</li>
+                        <li>PostgresSQL, PostGIS</li>
+                        <li>Amazon AWS, Nginx, Git</li>
+                        <li>OAuth 2.0, JWT, JSON API</li>
+                        <li>JQuery, React, Sass, Bootstrap</li>
                       </ul>
+                      <span>Full-Stack Developer</span>
                     </div>
                   </div>
                 </div>
@@ -94,39 +96,43 @@
                 <h1>EKM</h1>
                 <p>EKM (Exigen Knowledge management) is a web-based resource marketplace that aims to help corporations and individuals optimize resource acquisition, resource allocation and resource offering. The application is built upon ontology model hold as Java based services that communicate with PHP based semantic web frontend.</p>
                 <a href=""><span>SHOW MORE</span><i class="icon-chevron-thin-right"></i></a>
-                <div class="exp-tech-hover">
+                <div class="tech-hover">
                   <img src="images/2.jpg">
-                  <div class="exp-inner-main">
-                    <div class="exp-inner-brd"> 
-                      <h4>Discovery</h4>
+                  <div class="inner-main">
+                    <div class="inner-brd"> 
+                      <h4>EKM</h4>
+                      <h6>Tools & Techniques</h6>
                       <ul> 
-                        <li><a href="/user-research/">User Research</a></li> 
-                        <li><a href="/user-interviews/">User Interviews</a></li>
-                        <li><a href="/usability-testing/">Usability Testing</a></li>
-                        <li><a href="/market-competitive-analysis/">Market &amp; Competitive Analysis</a></li>
-                        <li><a href="/sandbox/">Sandbox</a></li>
+                        <li>Java, PHP, Unix Shell</li> 
+                        <li>MySQL, Apache, Tomcat</li>
+                        <li>Maven, Archiva, Hudson, CVS</li>
+                        <li>WordPress, Lucene, Ontologies</li>
+                        <li>HTML, CSS, jQuery, AJAX</li>
                       </ul>
+                      <span>Lead Consultant</span>
                     </div>
                   </div>
                 </div>
               </div>
               <div class="sub-slider">
                 <span class="icon-onedrive"></span>
-                <h1>Project 2</h1>
-                <p>A banking system is a data warehouse that consolidates cash payment, cash receivables information from various banking application and interfaces. It is designed to support various data requests in a flexible way and which can host more historical data.</p>
+                <h1>P&V system</h1>
+                <p>P&V system is sub-module of Hong Kong IMMD system and is to provide automatic means to process day to day Visa and Permit applications. And main functionality is data capturing, document classification, application indexing and etc.</p>
                 <a href=""><span>SHOW MORE</span><i class="icon-chevron-thin-right"></i></a>
-                <div class="exp-tech-hover">
+                <div class="tech-hover">
                   <img src="images/3.jpg">
-                  <div class="exp-inner-main">
-                    <div class="exp-inner-brd"> 
-                      <h4>Discovery</h4>
+                  <div class="inner-main">
+                    <div class="inner-brd"> 
+                      <h4>P&V system</h4>
+                      <h6>Tools & Techniques</h6>
                       <ul> 
-                        <li><a href="/user-research/">User Research</a></li> 
-                        <li><a href="/user-interviews/">User Interviews</a></li>
-                        <li><a href="/usability-testing/">Usability Testing</a></li>
-                        <li><a href="/market-competitive-analysis/">Market &amp; Competitive Analysis</a></li>
-                        <li><a href="/sandbox/">Sandbox</a></li>
+                        <li>Java, JDK1.4, PL-SQL</li> 
+                        <li>Weblogic, Oracle 9i, TOAD</li>
+                        <li>Eclipse, CVS, Ant</li>
+                        <li>Spring, iBatis, SAX/DOM, SOAP</li>
+                        <li>HTML, CSS, AJAX</li>
                       </ul>
+                      <span>Senior Consultant</span>
                     </div>
                   </div>
                 </div>
@@ -136,18 +142,20 @@
                 <h1>WIC</h1>
                 <p>The Work Injury Compensation (WIC) module focuses on capturing the details and tracking of work injury compensation and support claims and disbursement processes that have no disputes. The system will also allow external user to submit applications such as medical reports and application form via the internet.</p>
                 <a href=""><span>SHOW MORE</span><i class="icon-chevron-thin-right"></i></a>
-                <div class="exp-tech-hover">
+                <div class="tech-hover">
                   <img src="images/4.jpg">
-                  <div class="exp-inner-main">
-                    <div class="exp-inner-brd"> 
-                      <h4>Discovery</h4>
+                  <div class="inner-main">
+                    <div class="inner-brd"> 
+                      <h4>Work Injury Compensation</h4>
+                      <h6>Tools & Techniques</h6>
                       <ul> 
-                        <li><a href="/user-research/">User Research</a></li> 
-                        <li><a href="/user-interviews/">User Interviews</a></li>
-                        <li><a href="/usability-testing/">Usability Testing</a></li>
-                        <li><a href="/market-competitive-analysis/">Market &amp; Competitive Analysis</a></li>
-                        <li><a href="/sandbox/">Sandbox</a></li>
+                        <li>Java, JDK1.5, Jetty</li> 
+                        <li>Oracle 9i</li>
+                        <li>Struts, iBatis, UML</li>
+                        <li>IntelliJ IDEA, Rose, CVS</li>
+                        <li>HTML, CSS</li>
                       </ul>
+                      <span>Software Consultant</span>
                     </div>
                   </div>
                 </div>
@@ -157,18 +165,20 @@
                 <h1>WCS</h1>
                 <p>World Class Service (WCS) provides Victorian businesses with a single place to find information, ask questions and manage their dealings with government and is maintenance project.</p>
                 <a href=""><span>SHOW MORE</span><i class="icon-chevron-thin-right"></i></a>
-                <div class="exp-tech-hover">
+                <div class="tech-hover">
                   <img src="images/5.jpg">
-                  <div class="exp-inner-main">
-                    <div class="exp-inner-brd"> 
-                      <h4>Discovery</h4>
+                  <div class="inner-main">
+                    <div class="inner-brd"> 
+                      <h4>World Class Service</h4>
+                      <h6>Tools & Techniques</h6>
                       <ul> 
-                        <li><a href="/user-research/">User Research</a></li> 
-                        <li><a href="/user-interviews/">User Interviews</a></li>
-                        <li><a href="/usability-testing/">Usability Testing</a></li>
-                        <li><a href="/market-competitive-analysis/">Market &amp; Competitive Analysis</a></li>
-                        <li><a href="/sandbox/">Sandbox</a></li>
+                        <li>Java, JDK1.5</li> 
+                        <li>EJB 2.0, Hibernate</li>
+                        <li>Oracle 9i, JBoss, IntelliJ IDEA</li>
+                        <li>Microsoft Visio, TOAD, CVS</li>
+                        <li>HTML, CSS, SAX/DOM, UML</li>
                       </ul>
+                      <span>Software Consultant</span>
                     </div>
                   </div>
                 </div>
@@ -178,18 +188,20 @@
                 <h1>PORTS</h1>
                 <p>PORTS is a fully integrated computerized system that caters for prison's daily operational needs & inmate's rehabilitation and main operational functionality is admission of inmates into prison, transfer of inmate between prisons, discharge of inmates from prison and etc.</p>
                 <a href=""><span>SHOW MORE</span><i class="icon-chevron-thin-right"></i></a>
-                <div class="exp-tech-hover">
+                <div class="tech-hover">
                   <img src="images/6.jpg">
-                  <div class="exp-inner-main">
-                    <div class="exp-inner-brd"> 
-                      <h4>Discovery</h4>
+                  <div class="inner-main">
+                    <div class="inner-brd"> 
+                      <h4>PORTS</h4>
+                      <h6>Tools & Techniques</h6>
                       <ul> 
-                        <li><a href="/user-research/">User Research</a></li> 
-                        <li><a href="/user-interviews/">User Interviews</a></li>
-                        <li><a href="/usability-testing/">Usability Testing</a></li>
-                        <li><a href="/market-competitive-analysis/">Market &amp; Competitive Analysis</a></li>
-                        <li><a href="/sandbox/">Sandbox</a></li>
+                        <li>Java, JDK1.4</li> 
+                        <li>Servlets, JSP, JDBC, JNDI</li>
+                        <li>Weblogic, DB2</li>
+                        <li>IntelliJ IDEA, TOAD, VSS</li>
+                        <li>HTML, CSS</li>
                       </ul>
+                      <span>Software Engineer</span>
                     </div>
                   </div>
                 </div>
