--- a/index.html
+++ b/index.html
@@ -5,8 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link href="css/style.css" rel="stylesheet" type="text/css" media="all">
-    <link href="css/app.css?16" rel="stylesheet" type="text/css" media="all">
-
+    <link href="css/app.css?31" rel="stylesheet" type="text/css" media="all">
   </head>
   <body>
     <div class="header-content">
@@ -51,11 +50,17 @@
               </div>
               <div class="row">
                 <label>Email:</label>
-                <div class="normal-txt"><a href="mailto:paul@amazingwei.com">paul@amazingwei.com</a></div>
+                <div class="normal-txt">
+                  <a class="link-email" href="mailto:paul@amazingwei.com"><span class="icon-envelop"></span>paul@amazingwei.com</a>
+                </div>
               </div>
               <div class="row">
                 <label>Location:</label>
-                <div class="normal-txt"><a class="location-link" href="https://www.google.com/maps/place/Suzhou,+Jiangsu,+China/@31.3021493,120.5805406,11z/data=!4m5!3m4!1s0x35b3a0d19bd25e07:0x21e57f85bd766004!8m2!3d31.298974!4d120.585289" class="location"><span class="icon-location2"></span> Suzhou, Jiangsu Province, China</a></div>
+                <div class="normal-txt">
+                  <a class="location-link" href="https://www.google.com/maps/place/Suzhou,+Jiangsu,+China/@31.3021493,120.5805406,11z/data=!4m5!3m4!1s0x35b3a0d19bd25e07:0x21e57f85bd766004!8m2!3d31.298974!4d120.585289" class="location">
+                    <span class="icon-location2"></span> Suzhou, Jiangsu Province, China
+                  </a>
+                </div>
               </div>
               <div class="row btn-container"><a href="mailto:paul@amazingwei.com">contact</a></div>  
             </div>
@@ -211,11 +216,11 @@
           </div>
         </div>
       </div>
-      <div class="sub-section" >
+      <div class="sub-section skills">
         <div id="skills" class="profile">
           <h2>Skills</h2>
-          <div class="profile-table">
-              
+          <h5>Knowledge is gained by learning; trust by doubt; skill by practice; love by love. -- Thomas Szasz</h5>
+          <div class="profile-table" id="skills-table-id">
           </div>    
         </div>
       </div>
@@ -237,6 +242,6 @@
       </div>
     </div>
   <script src="js/jquery-3.3.1.min.js"></script>
-  <script src="js/app.js?22"></script>
+  <script src="js/app.js?23"></script>
   </body>
 </html>
