--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link href="css/style.css" rel="stylesheet" type="text/css" media="all">
-    <link href="css/app.css?33" rel="stylesheet" type="text/css" media="all">
+    <link href="css/app.css?35" rel="stylesheet" type="text/css" media="all">
   </head>
   <body>
     <div class="header-content">
@@ -224,23 +224,48 @@
           </div>    
         </div>
       </div>
-      <div class="sub-section" >
+      <div class="sub-section blog">
         <div id="blog" class="profile">
           <h2>Blog</h2>
-          <div class="profile-table">
-              
-          </div>    
+          <div class="profile-table" id="blog-table-id" style="height: 680px">
+
+          </div>
         </div>
       </div>
-      <div class="sub-section">
+      <div class="sub-section contact">
         <div id="contact" class="profile">
           <h2>Contact</h2>
-          <div class="profile-table">
-              
+          <div class="profile-table" id="contact-table-id" style="height: 280px;">
+            <form action="contact/index.php" method="POST" class="contact-form" >
+              <input type="text" name="name" value="" placeholder="Name*">
+              <input type="text" name="email" value="" placeholder="Email">
+              <textarea type="text" class="social-msg" name="msg" placeholder="Message*"></textarea>
+              <a href="#" id="contact-form-btn-id" class="contact-form-btn">Send Message</a>
+            </form>
+            <div class="social-content">
+              <div class="social-row">
+                <a href="https://www.facebook.com/weiliping.cn" class="facebook"><span class="icon-facebook"></span></a>
+                <a href="https://twitter.com/java_2009" class="twitter"><span class="icon-twitter"></span></a>
+                <a href="https://www.linkedin.com/in/paul-wei-64995652/" class="linkedin"><span class="icon-linkedin2"></span></a>
+              </div>
+              <div class="social-menu">
+                <ul>
+                    <li><a href="#profile">Profile</a></li>
+                    <li><a href="#portfolio">Portfolio</a></li>
+                    <li><a href="#skills">Skills</a></li>
+                    <li><a href="#blog">Blog</a></li>
+                    <li><a href="#contact">Contact</a></li>
+                </ul>
+              </div>
+            </div>
+            <div style="clear: both;"></div>
           </div>    
         </div>
       </div>
     </div>
+    <footer>
+      @ <span id="year"></span> amazingwei.com 
+    </footer>
   <script src="js/jquery-3.3.1.min.js"></script>
   <script src="js/app.js?23"></script>
   </body>
