--- a/index.html
+++ b/index.html
@@ -227,15 +227,24 @@
       <div class="sub-section blog">
         <div id="blog" class="profile">
           <h2>Blog</h2>
-          <div class="profile-table" id="blog-table-id" style="height: 680px">
-
+          <div class="profile-table" id="blog-table-id">
+            <div class="profile-sub-table">
+              <div class="blog-card">
+                <div class="img-container"><img src="images/5318.jpg"/></div>
+                <div class="txt-container">
+                  <h6>Unix useful commands</h6>
+                  <p>These ten commands are useful for monitoring system access, or simplifying your own environment.</p>
+                </div>
+              </div>
+            </div>
+            <div style="clear: both;"></div>
           </div>
         </div>
       </div>
       <div class="sub-section contact">
         <div id="contact" class="profile">
           <h2>Contact</h2>
-          <div class="profile-table" id="contact-table-id" style="height: 280px;">
+          <div class="profile-table" id="contact-table-id">
             <form action="contact/index.php" method="POST" class="contact-form" >
               <input type="text" name="name" value="" placeholder="Name*">
               <input type="text" class="email" name="email" value="" placeholder="Email">
