--- a/index.html
+++ b/index.html
@@ -236,6 +236,41 @@
                   <p>These ten commands are useful for monitoring system access, or simplifying your own environment.</p>
                 </div>
               </div>
+              <div class="blog-card">
+                <div class="img-container"><img src="images/11.jpg"/></div>
+                <div class="txt-container">
+                  <h6>Unix useful commands</h6>
+                  <p>These ten commands are useful for monitoring system access, or simplifying your own environment.</p>
+                </div>
+              </div>
+              <div class="blog-card">
+                <div class="img-container"><img src="images/12.jpg"/></div>
+                <div class="txt-container">
+                  <h6>Unix useful commands</h6>
+                  <p>These ten commands are useful for monitoring system access, or simplifying your own environment.</p>
+                </div>
+              </div>
+              <div class="blog-card">
+                <div class="img-container"><img src="images/13.jpg"/></div>
+                <div class="txt-container">
+                  <h6>Unix useful commands</h6>
+                  <p>These ten commands are useful for monitoring system access, or simplifying your own environment.</p>
+                </div>
+              </div>
+              <div class="blog-card">
+                  <div class="img-container"><img src="images/14.jpg"/></div>
+                <div class="txt-container">
+                  <h6>Unix useful commands</h6>
+                  <p>These ten commands are useful for monitoring system access, or simplifying your own environment.</p>
+                </div>
+              </div>
+              <div class="blog-card">
+                  <div class="img-container"><img src="images/15.jpg"/></div>
+                  <div class="txt-container">
+                    <h6>Unix useful commands</h6>
+                    <p>These ten commands are useful for monitoring system access, or simplifying your own environment.</p>
+                  </div>
+                </div>
             </div>
             <div style="clear: both;"></div>
           </div>
