--- a/index.html
+++ b/index.html
@@ -227,50 +227,8 @@
       <div class="sub-section blog">
         <div id="blog" class="profile">
           <h2>Blog</h2>
-          <div class="profile-table" id="blog-table-id">
-            <div class="profile-sub-table">
-              <div class="blog-card">
-                <div class="img-container"><img src="images/5318.jpg"/></div>
-                <div class="txt-container">
-                  <h6>Unix useful commands</h6>
-                  <p>These ten commands are useful for monitoring system access, or simplifying your own environment.</p>
-                </div>
-              </div>
-              <div class="blog-card">
-                <div class="img-container"><img src="images/11.jpg"/></div>
-                <div class="txt-container">
-                  <h6>Unix useful commands</h6>
-                  <p>These ten commands are useful for monitoring system access, or simplifying your own environment.</p>
-                </div>
-              </div>
-              <div class="blog-card">
-                <div class="img-container"><img src="images/12.jpg"/></div>
-                <div class="txt-container">
-                  <h6>Unix useful commands</h6>
-                  <p>These ten commands are useful for monitoring system access, or simplifying your own environment.</p>
-                </div>
-              </div>
-              <div class="blog-card">
-                <div class="img-container"><img src="images/13.jpg"/></div>
-                <div class="txt-container">
-                  <h6>Unix useful commands</h6>
-                  <p>These ten commands are useful for monitoring system access, or simplifying your own environment.</p>
-                </div>
-              </div>
-              <div class="blog-card">
-                  <div class="img-container"><img src="images/14.jpg"/></div>
-                <div class="txt-container">
-                  <h6>Unix useful commands</h6>
-                  <p>These ten commands are useful for monitoring system access, or simplifying your own environment.</p>
-                </div>
-              </div>
-              <div class="blog-card">
-                  <div class="img-container"><img src="images/15.jpg"/></div>
-                  <div class="txt-container">
-                    <h6>Unix useful commands</h6>
-                    <p>These ten commands are useful for monitoring system access, or simplifying your own environment.</p>
-                  </div>
-                </div>
+          <div class="profile-table">
+            <div class="profile-sub-table" id="blog-table-id">
             </div>
             <div style="clear: both;"></div>
           </div>
