--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <title>Paul - A Full Stack Web Developer</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link href="css/style.css?100" rel="stylesheet" type="text/css" media="all">
-    <link href="css/app.css?104" rel="stylesheet" type="text/css" media="all">
+    <link href="css/app.css?105" rel="stylesheet" type="text/css" media="all">
   </head>
   <body>
     <div class="header-content" id="header-page-id">
