--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link href="css/style.css?100" rel="stylesheet" type="text/css" media="all">
-    <link href="css/app.css?108" rel="stylesheet" type="text/css" media="all">
+    <link href="css/app.css?110" rel="stylesheet" type="text/css" media="all">
   </head>
   <body>
     <div class="header-content" id="header-page-id">
@@ -132,6 +132,6 @@
       </div>
     </footer>
   <script src="js/jquery-3.3.1.min.js"></script>
-  <script src="js/app-1.0.2.min.js"></script>
+  <script src="js/app.js"></script>
   </body>
 </html>
