add returning back to header.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link href="css/style.css?100" rel="stylesheet" type="text/css" media="all">
-    <link href="css/app.css?112" rel="stylesheet" type="text/css" media="all">
+    <link href="css/app.css?4" rel="stylesheet" type="text/css" media="all">
   </head>
   <body>
     <div class="header-content" id="header-page-id">
@@ -130,6 +130,7 @@
         </div>
         <div class="license-row"> @ <span id="year"></span> amazingwei.com </div>
       </div>
+      <div id="redirect_to_header" class="redirect_to_header" style="display: none;"><a href="#"><span class="icon-circle-right"></span></a></div>
     </footer>
   <script src="js/jquery-3.3.1.min.js"></script>
   <script src="js/app.js"></script>
