--- a/index.html
+++ b/index.html
@@ -133,6 +133,6 @@
       <div id="redirect_to_header" class="redirect_to_header" style="display: none;"><a href="#"><span class="icon-circle-right"></span></a></div>
     </footer>
   <script src="js/jquery-3.3.1.min.js"></script>
-  <script src="js/app.js"></script>
+  <script src="js/app-1.0.2.min.js"></script>
   </body>
 </html>
